# DRFProject

./: .env  .env.sample  .gitignore  pyproject.toml
config/: settings.py
materials/: admin.py  models.py  serilazers.py  urls.py
materials/migrations/: 0001_initial.py  0002_alter_course_description_alter_course_name_and_more.py
users/: admin.py  apps.py  models.py  serilazers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_payment.py
